--- a/css/estilos.css
+++ b/css/estilos.css
@@ -64,7 +64,7 @@
     filter: drop-shadow(0 0 15px #000);
   }
   .bg-color .container-fluid a img:active {
-    transform: translateX(5px);
+    transform: scale(0.8);
   }
   .bg-color .container-fluid div ul li a {
     font-size: 17px;
@@ -81,7 +81,7 @@
     color: #ac9090;
   }
   .bg-color .container-fluid div ul li a:active {
-    transform: translateX(5px);
+    transform: scale(0.8);
   }
   main .sec-noticia .sec-noticia1 {
     padding: 10px;
@@ -234,7 +234,9 @@
   header .containerheader h1:hover {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   }
-  header .containerheader h6, header .containerheader h1, header .containerheader h5 {
+  header .containerheader h6,
+  header .containerheader h1,
+  header .containerheader h5 {
     text-shadow: 1px 1px 1px #000, -1px -1px 1px #fff;
   }
   .bg-color {
@@ -269,7 +271,7 @@
     box-shadow: 0 2px #666;
   }
   .bg-color .container-fluid div ul li a:active {
-    transform: translateX(5px);
+    transform: scale(0.8);
   }
   main .grilla {
     display: grid;
@@ -690,39 +692,143 @@
   }
 }
 @media screen and (max-width: 768px) {
-  main .container-estadios #estadio-1, main .container-estadios #estadio-2, main .container-estadios #estadio-3, main .container-estadios #estadio-4, main .container-estadios #estadio-5, main .container-estadios #estadio-6, main .container-estadios #estadio-7, main .container-estadios #estadio-8, main .container-estadios #estadio-9, main .container-estadios #estadio-10, main .container-estadios #estadio-11, main .container-estadios #estadio-12, main .container-estadios #estadio-13, main .container-estadios #estadio-14 {
+  main .container-estadios #estadio-1,
+  main .container-estadios #estadio-2,
+  main .container-estadios #estadio-3,
+  main .container-estadios #estadio-4,
+  main .container-estadios #estadio-5,
+  main .container-estadios #estadio-6,
+  main .container-estadios #estadio-7,
+  main .container-estadios #estadio-8,
+  main .container-estadios #estadio-9,
+  main .container-estadios #estadio-10,
+  main .container-estadios #estadio-11,
+  main .container-estadios #estadio-12,
+  main .container-estadios #estadio-13,
+  main .container-estadios #estadio-14 {
     padding: 15px;
   }
-  main .container-estadios #estadio-1 section, main .container-estadios #estadio-2 section, main .container-estadios #estadio-3 section, main .container-estadios #estadio-4 section, main .container-estadios #estadio-5 section, main .container-estadios #estadio-6 section, main .container-estadios #estadio-7 section, main .container-estadios #estadio-8 section, main .container-estadios #estadio-9 section, main .container-estadios #estadio-10 section, main .container-estadios #estadio-11 section, main .container-estadios #estadio-12 section, main .container-estadios #estadio-13 section, main .container-estadios #estadio-14 section {
+  main .container-estadios #estadio-1 section,
+  main .container-estadios #estadio-2 section,
+  main .container-estadios #estadio-3 section,
+  main .container-estadios #estadio-4 section,
+  main .container-estadios #estadio-5 section,
+  main .container-estadios #estadio-6 section,
+  main .container-estadios #estadio-7 section,
+  main .container-estadios #estadio-8 section,
+  main .container-estadios #estadio-9 section,
+  main .container-estadios #estadio-10 section,
+  main .container-estadios #estadio-11 section,
+  main .container-estadios #estadio-12 section,
+  main .container-estadios #estadio-13 section,
+  main .container-estadios #estadio-14 section {
     box-shadow: 0 0 55px 0 #000;
     border: 1px solid rgba(102, 98, 98, 0.498);
     border-radius: 10px;
     transition: box-shadow 0.3s ease-in-out;
     padding-bottom: 10px;
   }
-  main .container-estadios #estadio-1 section:hover, main .container-estadios #estadio-2 section:hover, main .container-estadios #estadio-3 section:hover, main .container-estadios #estadio-4 section:hover, main .container-estadios #estadio-5 section:hover, main .container-estadios #estadio-6 section:hover, main .container-estadios #estadio-7 section:hover, main .container-estadios #estadio-8 section:hover, main .container-estadios #estadio-9 section:hover, main .container-estadios #estadio-10 section:hover, main .container-estadios #estadio-11 section:hover, main .container-estadios #estadio-12 section:hover, main .container-estadios #estadio-13 section:hover, main .container-estadios #estadio-14 section:hover {
+  main .container-estadios #estadio-1 section:hover,
+  main .container-estadios #estadio-2 section:hover,
+  main .container-estadios #estadio-3 section:hover,
+  main .container-estadios #estadio-4 section:hover,
+  main .container-estadios #estadio-5 section:hover,
+  main .container-estadios #estadio-6 section:hover,
+  main .container-estadios #estadio-7 section:hover,
+  main .container-estadios #estadio-8 section:hover,
+  main .container-estadios #estadio-9 section:hover,
+  main .container-estadios #estadio-10 section:hover,
+  main .container-estadios #estadio-11 section:hover,
+  main .container-estadios #estadio-12 section:hover,
+  main .container-estadios #estadio-13 section:hover,
+  main .container-estadios #estadio-14 section:hover {
     transform: scale(1.04);
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
   }
-  main .container-estadios #estadio-1 section article img, main .container-estadios #estadio-2 section article img, main .container-estadios #estadio-3 section article img, main .container-estadios #estadio-4 section article img, main .container-estadios #estadio-5 section article img, main .container-estadios #estadio-6 section article img, main .container-estadios #estadio-7 section article img, main .container-estadios #estadio-8 section article img, main .container-estadios #estadio-9 section article img, main .container-estadios #estadio-10 section article img, main .container-estadios #estadio-11 section article img, main .container-estadios #estadio-12 section article img, main .container-estadios #estadio-13 section article img, main .container-estadios #estadio-14 section article img {
+  main .container-estadios #estadio-1 section article img,
+  main .container-estadios #estadio-2 section article img,
+  main .container-estadios #estadio-3 section article img,
+  main .container-estadios #estadio-4 section article img,
+  main .container-estadios #estadio-5 section article img,
+  main .container-estadios #estadio-6 section article img,
+  main .container-estadios #estadio-7 section article img,
+  main .container-estadios #estadio-8 section article img,
+  main .container-estadios #estadio-9 section article img,
+  main .container-estadios #estadio-10 section article img,
+  main .container-estadios #estadio-11 section article img,
+  main .container-estadios #estadio-12 section article img,
+  main .container-estadios #estadio-13 section article img,
+  main .container-estadios #estadio-14 section article img {
     width: 100%;
     border-radius: 10px 10px 0px 0px;
   }
-  main .container-estadios #estadio-1 section div, main .container-estadios #estadio-2 section div, main .container-estadios #estadio-3 section div, main .container-estadios #estadio-4 section div, main .container-estadios #estadio-5 section div, main .container-estadios #estadio-6 section div, main .container-estadios #estadio-7 section div, main .container-estadios #estadio-8 section div, main .container-estadios #estadio-9 section div, main .container-estadios #estadio-10 section div, main .container-estadios #estadio-11 section div, main .container-estadios #estadio-12 section div, main .container-estadios #estadio-13 section div, main .container-estadios #estadio-14 section div {
+  main .container-estadios #estadio-1 section div,
+  main .container-estadios #estadio-2 section div,
+  main .container-estadios #estadio-3 section div,
+  main .container-estadios #estadio-4 section div,
+  main .container-estadios #estadio-5 section div,
+  main .container-estadios #estadio-6 section div,
+  main .container-estadios #estadio-7 section div,
+  main .container-estadios #estadio-8 section div,
+  main .container-estadios #estadio-9 section div,
+  main .container-estadios #estadio-10 section div,
+  main .container-estadios #estadio-11 section div,
+  main .container-estadios #estadio-12 section div,
+  main .container-estadios #estadio-13 section div,
+  main .container-estadios #estadio-14 section div {
     padding: 3px;
   }
-  main .container-estadios #estadio-1 section div h3, main .container-estadios #estadio-2 section div h3, main .container-estadios #estadio-3 section div h3, main .container-estadios #estadio-4 section div h3, main .container-estadios #estadio-5 section div h3, main .container-estadios #estadio-6 section div h3, main .container-estadios #estadio-7 section div h3, main .container-estadios #estadio-8 section div h3, main .container-estadios #estadio-9 section div h3, main .container-estadios #estadio-10 section div h3, main .container-estadios #estadio-11 section div h3, main .container-estadios #estadio-12 section div h3, main .container-estadios #estadio-13 section div h3, main .container-estadios #estadio-14 section div h3 {
+  main .container-estadios #estadio-1 section div h3,
+  main .container-estadios #estadio-2 section div h3,
+  main .container-estadios #estadio-3 section div h3,
+  main .container-estadios #estadio-4 section div h3,
+  main .container-estadios #estadio-5 section div h3,
+  main .container-estadios #estadio-6 section div h3,
+  main .container-estadios #estadio-7 section div h3,
+  main .container-estadios #estadio-8 section div h3,
+  main .container-estadios #estadio-9 section div h3,
+  main .container-estadios #estadio-10 section div h3,
+  main .container-estadios #estadio-11 section div h3,
+  main .container-estadios #estadio-12 section div h3,
+  main .container-estadios #estadio-13 section div h3,
+  main .container-estadios #estadio-14 section div h3 {
     padding: 15px;
     color: #003282;
     margin: 0;
   }
-  main .container-estadios #estadio-1 section div .datos-estadios, main .container-estadios #estadio-2 section div .datos-estadios, main .container-estadios #estadio-3 section div .datos-estadios, main .container-estadios #estadio-4 section div .datos-estadios, main .container-estadios #estadio-5 section div .datos-estadios, main .container-estadios #estadio-6 section div .datos-estadios, main .container-estadios #estadio-7 section div .datos-estadios, main .container-estadios #estadio-8 section div .datos-estadios, main .container-estadios #estadio-9 section div .datos-estadios, main .container-estadios #estadio-10 section div .datos-estadios, main .container-estadios #estadio-11 section div .datos-estadios, main .container-estadios #estadio-12 section div .datos-estadios, main .container-estadios #estadio-13 section div .datos-estadios, main .container-estadios #estadio-14 section div .datos-estadios {
+  main .container-estadios #estadio-1 section div .datos-estadios,
+  main .container-estadios #estadio-2 section div .datos-estadios,
+  main .container-estadios #estadio-3 section div .datos-estadios,
+  main .container-estadios #estadio-4 section div .datos-estadios,
+  main .container-estadios #estadio-5 section div .datos-estadios,
+  main .container-estadios #estadio-6 section div .datos-estadios,
+  main .container-estadios #estadio-7 section div .datos-estadios,
+  main .container-estadios #estadio-8 section div .datos-estadios,
+  main .container-estadios #estadio-9 section div .datos-estadios,
+  main .container-estadios #estadio-10 section div .datos-estadios,
+  main .container-estadios #estadio-11 section div .datos-estadios,
+  main .container-estadios #estadio-12 section div .datos-estadios,
+  main .container-estadios #estadio-13 section div .datos-estadios,
+  main .container-estadios #estadio-14 section div .datos-estadios {
     margin-left: 15px;
     display: flex;
     align-items: center;
     gap: 5px;
   }
-  main .container-estadios #estadio-1 section div .datos-estadios p, main .container-estadios #estadio-2 section div .datos-estadios p, main .container-estadios #estadio-3 section div .datos-estadios p, main .container-estadios #estadio-4 section div .datos-estadios p, main .container-estadios #estadio-5 section div .datos-estadios p, main .container-estadios #estadio-6 section div .datos-estadios p, main .container-estadios #estadio-7 section div .datos-estadios p, main .container-estadios #estadio-8 section div .datos-estadios p, main .container-estadios #estadio-9 section div .datos-estadios p, main .container-estadios #estadio-10 section div .datos-estadios p, main .container-estadios #estadio-11 section div .datos-estadios p, main .container-estadios #estadio-12 section div .datos-estadios p, main .container-estadios #estadio-13 section div .datos-estadios p, main .container-estadios #estadio-14 section div .datos-estadios p {
+  main .container-estadios #estadio-1 section div .datos-estadios p,
+  main .container-estadios #estadio-2 section div .datos-estadios p,
+  main .container-estadios #estadio-3 section div .datos-estadios p,
+  main .container-estadios #estadio-4 section div .datos-estadios p,
+  main .container-estadios #estadio-5 section div .datos-estadios p,
+  main .container-estadios #estadio-6 section div .datos-estadios p,
+  main .container-estadios #estadio-7 section div .datos-estadios p,
+  main .container-estadios #estadio-8 section div .datos-estadios p,
+  main .container-estadios #estadio-9 section div .datos-estadios p,
+  main .container-estadios #estadio-10 section div .datos-estadios p,
+  main .container-estadios #estadio-11 section div .datos-estadios p,
+  main .container-estadios #estadio-12 section div .datos-estadios p,
+  main .container-estadios #estadio-13 section div .datos-estadios p,
+  main .container-estadios #estadio-14 section div .datos-estadios p {
     margin: 0;
     color: #71717A;
   }
@@ -814,6 +920,184 @@
   }
 }
 @media screen and (max-width: 768px) {
+  main #noticia .noticia-1 article img {
+    width: 100%;
+    border-radius: 15px;
+    padding: 10px;
+  }
+  main #noticia .noticia-1 div {
+    padding-left: 10px;
+    border-bottom: 1px solid rgb(79, 78, 78);
+  }
+  main #noticia .noticia-1 div h3 {
+    margin: 0;
+  }
+  main #noticia .noticia-1 div p {
+    padding-top: 5px;
+    color: rgb(177, 171, 163);
+    margin: 0;
+    padding-bottom: 15px;
+  }
+  main #noticia .noticia-2 ul {
+    margin: 0;
+    padding: 20px;
+  }
+  main #noticia .noticia-2 ul li {
+    gap: 15px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    border-bottom: 1px solid rgb(110, 110, 110);
+    list-style: none;
+  }
+  main #noticia .noticia-2 ul li div img {
+    width: 100%;
+    border-radius: 15px;
+  }
+  main #noticia .noticia-2 ul .contenido-info {
+    padding: 10px;
+  }
+  main #noticia .noticia-2 ul .contenido-info span {
+    color: rgb(35, 97, 97);
+  }
+  main #noticia .noticia-2 ul .contenido-info p {
+    margin: 0;
+  }
+  main #noticia .noticia-2 ul .contenido-info h3 {
+    font-size: 25px;
+  }
+  main #noticia .aside-1 div .title-equipos {
+    margin-top: 20px;
+  }
+  main #noticia .aside-1 div .title-equipos h3 {
+    font-size: 16px;
+    margin: 0;
+    padding: 20px;
+    border-bottom: 1px solid rgb(200, 191, 181);
+  }
+  main #noticia .aside-1 div ul {
+    display: flex;
+    margin: 0;
+    padding: 5px;
+    flex-wrap: wrap;
+  }
+  main #noticia .aside-1 div ul li {
+    display: flex;
+    gap: 10px;
+    height: 100%;
+    flex: 1 1 50%;
+    padding: 10px;
+  }
+  main #noticia .aside-1 div ul li div {
+    width: 18%;
+  }
+  main #noticia .aside-1 div ul li div img {
+    width: 100%;
+    border-radius: 100%;
+    height: 100%;
+  }
+  main #noticia .aside-1 div ul li p {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 769px) {
+  main #noticia {
+    display: grid;
+    grid-template-areas: "noticia1 aside1" "noticia2 .";
+    grid-template-columns: 70% 30%;
+  }
+  main #noticia .noticia-1 {
+    grid-area: noticia1;
+  }
+  main #noticia .noticia-1 article img {
+    width: 100%;
+    border-radius: 50px;
+    padding: 30px;
+  }
+  main #noticia .noticia-1 div {
+    padding-left: 30px;
+    border-bottom: 1px solid rgb(79, 78, 78);
+  }
+  main #noticia .noticia-1 div h3 {
+    margin: 0;
+  }
+  main #noticia .noticia-1 div p {
+    padding-top: 5px;
+    color: rgb(177, 171, 163);
+    margin: 0;
+    padding-bottom: 15px;
+  }
+  main #noticia .noticia-2 {
+    grid-area: noticia2;
+  }
+  main #noticia .noticia-2 ul {
+    margin: 0;
+    padding: 20px;
+  }
+  main #noticia .noticia-2 ul li {
+    gap: 15px;
+    display: flex;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    border-bottom: 1px solid rgb(110, 110, 110);
+  }
+  main #noticia .noticia-2 ul li div {
+    width: 35%;
+  }
+  main #noticia .noticia-2 ul li div img {
+    width: 100%;
+    border-radius: 15px;
+  }
+  main #noticia .noticia-2 ul .contenido-info {
+    padding: 10px;
+    width: 65%;
+  }
+  main #noticia .noticia-2 ul .contenido-info span {
+    color: rgb(35, 97, 97);
+  }
+  main #noticia .noticia-2 ul .contenido-info p {
+    margin: 0;
+  }
+  main #noticia .noticia-2 ul .contenido-info h3 {
+    font-size: 25px;
+  }
+  main #noticia .aside-1 {
+    grid-area: aside1;
+  }
+  main #noticia .aside-1 div .title-equipos {
+    margin-top: 20px;
+  }
+  main #noticia .aside-1 div .title-equipos h3 {
+    font-size: 16px;
+    margin: 0;
+    padding: 20px;
+    border-bottom: 1px solid rgb(200, 191, 181);
+  }
+  main #noticia .aside-1 div ul {
+    display: flex;
+    margin: 0;
+    padding: 5px;
+    flex-wrap: wrap;
+  }
+  main #noticia .aside-1 div ul li {
+    display: flex;
+    gap: 10px;
+    height: 100%;
+    flex: 1 1 50%;
+    padding: 10px;
+  }
+  main #noticia .aside-1 div ul li div {
+    width: 18%;
+  }
+  main #noticia .aside-1 div ul li div img {
+    width: 100%;
+    border-radius: 100%;
+    height: 100%;
+  }
+  main #noticia .aside-1 div ul li p {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 768px) {
   .main-contacto {
     display: flex;
     justify-content: center;
@@ -847,7 +1131,8 @@
     margin-bottom: 8px;
     color: #555;
   }
-  .main-contacto #contact .container-contact #contactForm .form-group input, .main-contacto #contact .container-contact #contactForm .form-group textarea {
+  .main-contacto #contact .container-contact #contactForm .form-group input,
+  .main-contacto #contact .container-contact #contactForm .form-group textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -899,6 +1184,8 @@
     text-align: center;
     color: #333;
     margin-bottom: 30px;
+    border: 1px solid black;
+    border-radius: 10px;
   }
   .main-contacto #contact .container-contact #contactForm .form-group {
     margin-bottom: 20px;
@@ -908,7 +1195,8 @@
     margin-bottom: 8px;
     color: #555;
   }
-  .main-contacto #contact .container-contact #contactForm .form-group input, .main-contacto #contact .container-contact #contactForm .form-group textarea {
+  .main-contacto #contact .container-contact #contactForm .form-group input,
+  .main-contacto #contact .container-contact #contactForm .form-group textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
