--- a/scss/index/_indexmqmobile.scss
+++ b/scss/index/_indexmqmobile.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 768px) {
     header {
-        background:linear-gradient(#56857c, transparent,#C1DCD7 ) ;
+        background: linear-gradient(#56857c, transparent, #C1DCD7);
         padding: 2vh;
         color: rgb(53, 10, 10);
         font-style: normal;
@@ -11,6 +11,7 @@
 
         .containerlogo {
             width: 30vh;
+
             .logo {
                 width: 100%;
                 filter: drop-shadow(0 0 15px #000);
@@ -21,6 +22,7 @@
             width: 70vh;
             word-spacing: 1px;
             margin-right: 15px;
+
             h6 {
                 text-decoration: underline;
             }
@@ -31,23 +33,28 @@
     .bg-color {
         font-style: italic;
         font-weight: bold;
-        background: linear-gradient(transparent,#C1DCD7, transparent);
+        background: linear-gradient(transparent, #C1DCD7, transparent);
+
         .container-fluid {
             a {
                 width: 30%;
+
                 img {
                     width: 50%;
                     filter: drop-shadow(0 0 15px #000);
+
                     &:active {
-                        transform: translateX(5px);
+                        transform: scale(0.8);
                     }
                 }
             }
-            div ul li a {    
+
+            div ul li a {
                 font-size: 17px;
                 color: rgb(0, 0, 0);
                 font-size: 20px;
                 transition: all 0.2s ease;
+
                 &:hover {
                     background-color: #ffffff94;
                     border-radius: 10px;
@@ -56,10 +63,11 @@
                     box-shadow: 0 2px #666;
                     color: #ac9090;
                 }
+
                 &:active {
-                    transform: translateX(5px);
+                    transform: scale(0.8);
                 }
-            }    
+            }
         }
     }
 
@@ -69,14 +77,17 @@
                 padding: 10px;
                 background: linear-gradient(#C1DCD7, transparent, #C1DCD7);
                 filter: drop-shadow(0 0 15px #000);
+
                 article {
                     div img {
                         width: 100%;
                     }
+
                     h2 {
                         font-size: 25px;
                         filter: drop-shadow(0 0 15px #000);
                     }
+
                     h3 {
                         text-align: center;
                         font-size: 16px;
@@ -87,17 +98,20 @@
             .sec-noticia2 {
                 padding: 10px;
                 background: linear-gradient(#C1DCD7, transparent, #C1DCD7);
+
                 article {
-                    div { 
+                    div {
                         display: flex;
                         align-items: center;
                         height: 20vh;
+
                         img {
                             width: 40%;
                             margin-right: 10px;
                             border-radius: 20px;
                             filter: drop-shadow(0 0 15px #000);
                         }
+
                         h4 {
                             font-size: 16px;
                             text-align: center;
@@ -107,35 +121,40 @@
                 }
             }
         }
+
         .grilla {
             display: grid;
-            grid-template-areas: 
-            "imagen1" 
-            "imagen2" 
-            "imagen3";
+            grid-template-areas:
+                "imagen1"
+                "imagen2"
+                "imagen3";
             gap: 10px;
             margin: 10px;
+
             #imagen1 {
                 grid-area: imagen1;
                 box-shadow: 0 0 55px 0 #000;
+
                 &:hover {
                     filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
                     transform: scale(1.04);
                 }
             }
-              
+
             #imagen2 {
                 grid-area: imagen2;
                 box-shadow: 0 0 55px 0 #000;
+
                 &:hover {
                     filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
                     transform: scale(1.04);
                 }
             }
-              
+
             #imagen3 {
                 grid-area: imagen3;
                 box-shadow: 0 0 55px 0 #000;
+
                 &:hover {
                     filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
                     transform: scale(1.04);
@@ -143,6 +162,7 @@
             }
         }
     }
+
     footer {
         background-color: rgb(167, 184, 184);
         padding: 10px;
@@ -150,15 +170,18 @@
         align-content: center;
         width: 100%;
         color: #000;
+
         .footer-container {
             .footer-logo {
                 justify-content: center;
                 display: flex;
+
                 img {
                     width: 50%;
                     filter: drop-shadow(0 0 15px #000);
-                } 
-            }    
+                }
+            }
+
             .footer-links ul {
                 display: flex;
                 width: 90%;
@@ -166,13 +189,16 @@
                 gap: 15px;
                 padding: 0;
                 margin-left: 15px;
+
                 li {
                     font-size: 15px;
                     margin-top: 15px;
                     list-style: none;
+
                     a {
                         text-decoration: none;
                         color: #2b2525;
+
                         &:hover {
                             background-color: #ffffff94;
                             border-radius: 10px;
@@ -182,28 +208,32 @@
                             cursor: pointer;
                         }
                     }
-                }         
+                }
             }
+
             .footer-contact {
                 font-size: 15px;
-            }       
+            }
         }
+
         .social-icons {
             ul {
                 padding: 0;
                 display: flex;
                 gap: 20px;
                 margin-bottom: 0;
+
                 li {
                     list-style: none;
-                    a { 
+
+                    a {
                         img {
-                            width:90%;
-                            filter: drop-shadow(0 0 15px #000);  
+                            width: 90%;
+                            filter: drop-shadow(0 0 15px #000);
                         }
                     }
-                }      
-            } 
-        } 
+                }
+            }
+        }
     }
 }
