--- a/css/estilos.css
+++ b/css/estilos.css
@@ -439,16 +439,17 @@
     text-shadow: 1px 1px 1px #bdaeae, -1px -1px 1px #fff;
   }
   .main-grupos h2 {
-    font-size: 35px;
+    font-size: 30px;
     font-family: sans-serif;
-    background-color: #161010;
     padding: 15px;
+    border-bottom: 1px solid #676666;
+    filter: drop-shadow(0 0 15px #000);
   }
   .main-grupos section .container-grupos {
     display: grid;
     grid-template-areas: "grupoa" "grupob" "grupoc" "grupod";
-    gap: 5px;
-    padding: 5px 3px 5px 3px;
+    gap: 15px;
+    padding: 10px 3px 5px 3px;
     filter: drop-shadow(0 0 15px #000);
   }
   .main-grupos section .container-grupos #container-a {
@@ -457,6 +458,7 @@
     border-radius: 20px;
     background-color: #f0dbdb;
     border-style: groove;
+    padding-left: 5px;
   }
   .main-grupos section .container-grupos #container-a table thead tr th {
     color: #e23434;
@@ -475,6 +477,8 @@
   }
   .main-grupos section .container-grupos #container-a table tbody tr td .flex-banderas h5 {
     font-size: 16px;
+    margin: 0;
+    align-content: center;
   }
   .main-grupos section .container-grupos #container-a table tbody tr td .flex-banderas div {
     width: 20%;
@@ -494,6 +498,7 @@
     border-radius: 20px;
     background-color: #f0dbdb;
     border-style: groove;
+    padding-left: 5px;
   }
   .main-grupos section .container-grupos #container-b div table thead tr th {
     color: #e23434;
@@ -530,6 +535,7 @@
     border-radius: 20px;
     background-color: #f0dbdb;
     border-style: groove;
+    padding-left: 5px;
   }
   .main-grupos section .container-grupos #container-c div table thead tr th {
     color: #e23434;
@@ -566,6 +572,7 @@
     border-radius: 20px;
     background-color: #f0dbdb;
     border-style: groove;
+    padding-left: 5px;
   }
   .main-grupos section .container-grupos #container-d div table thead tr th {
     color: #e23434;
@@ -606,10 +613,11 @@
     text-shadow: 1px 1px 1px #bdaeae, -1px -1px 1px #fff;
   }
   .main-grupos h2 {
-    font-size: 35px;
+    font-size: 30px;
     font-family: sans-serif;
-    background-color: #161010;
     padding: 15px;
+    border-bottom: 1px solid #676666;
+    filter: drop-shadow(0 0 15px #000);
   }
   .main-grupos section .container-grupos {
     display: grid;
