--- a/scss/grupos/_grupmqdesktop.scss
+++ b/scss/grupos/_grupmqdesktop.scss
@@ -7,10 +7,11 @@
         text-shadow: 1px 1px 1px #bdaeae, -1px -1px 1px #fff;
 
         h2 {
-            font-size: 35px;
+            font-size: 30px;
             font-family: sans-serif;
-            background-color: #161010;
             padding: 15px;
+            border-bottom: 1px solid #676666;
+            filter: drop-shadow(0 0 15px #000);
         }
 
         section {
