--- a/scss/grupos/_grupmqmobile.scss
+++ b/scss/grupos/_grupmqmobile.scss
@@ -6,10 +6,11 @@
         text-shadow: 1px 1px 1px #bdaeae, -1px -1px 1px #fff;
 
         h2 {
-            font-size: 35px;
+            font-size: 30px;
             font-family: sans-serif;
-            background-color: #161010;
             padding: 15px;
+            border-bottom: 1px solid #676666;
+            filter: drop-shadow(0 0 15px #000);
         }
 
         section {
@@ -20,9 +21,9 @@
                     "grupob"
                     "grupoc"
                     "grupod";
-                gap: 5px;
+                gap: 15px;
 
-                padding: 5px 3px 5px 3px;
+                padding: 10px 3px 5px 3px;
                 filter: drop-shadow(0 0 15px #000);
 
                 #container-a {
@@ -31,6 +32,7 @@
                     border-radius: 20px;
                     background-color: #f0dbdb;
                     border-style: groove;
+                    padding-left: 5px;
 
                     table {
                         thead tr {
@@ -55,6 +57,8 @@
 
                                     h5 {
                                         font-size: 16px;
+                                        margin: 0;
+                                        align-content: center;
                                     }
 
                                     div {
@@ -83,6 +87,7 @@
                     border-radius: 20px;
                     background-color: #f0dbdb;
                     border-style: groove;
+                    padding-left: 5px;
 
                     div table {
                         thead tr {
@@ -134,6 +139,7 @@
                     border-radius: 20px;
                     background-color: #f0dbdb;
                     border-style: groove;
+                    padding-left: 5px;
 
                     div table {
                         thead tr {
@@ -185,6 +191,7 @@
                     border-radius: 20px;
                     background-color: #f0dbdb;
                     border-style: groove;
+                    padding-left: 5px;
 
                     div table {
                         thead tr {
